// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`#cogs/cogs/textarea <Cog /> With additional props Default value is a string matches the snapshot 1`] = `
<div
  className="MOCK CLASSNAME"
>
  <TextareaTitle>
    <label
      className="MOCK CLASSNAME"
      htmlFor="MOCK ID"
    >
      <TextContent>
        <span
          className="text-content"
        >
          MOCK TITLE
        </span>
      </TextContent>
      <Required>
        <span
          className="is-required"
        >
          *
        </span>
      </Required>
      <Disabled>
        <span
          className="is-disabled"
        >
          *
        </span>
      </Disabled>
      <ReadOnly>
        <span
          className="is-readonly"
        >
          *
        </span>
      </ReadOnly>
    </label>
  </TextareaTitle>
  <TextareaDescription>
    <span
      className="MOCK CLASSNAME"
    >
      <TextContent>
        <span
          className="text-content"
        >
          MOCK DESCRIPTION
        </span>
      </TextContent>
    </span>
  </TextareaDescription>
  <TextareaErrorMessage>
    <span
      className="MOCK CLASSNAME"
    >
      <TextContent>
        <span
          className="text-content"
        >
          Unknown
        </span>
      </TextContent>
    </span>
  </TextareaErrorMessage>
  <TextareaField>
    <textarea
      accessKey="MOCK ACCESS KEY"
      className="MOCK CLASSNAME"
      defaultValue="MOCK DEFAULT VALUE"
      disabled={true}
      id="MOCK ID"
      name="MOCK NAME"
      onChange={[Function]}
      placeholder="MOCK PLACEHOLDER"
      readOnly={true}
      required={true}
      tabIndex={1}
    />
  </TextareaField>
</div>
`;

exports[`#cogs/cogs/textarea <Cog /> With additional props Value is a string matches the snapshot 1`] = `
<div
  className="MOCK CLASSNAME"
>
  <TextareaTitle>
    <label
      className="MOCK CLASSNAME"
      htmlFor="MOCK ID"
    >
      <TextContent>
        <span
          className="text-content"
        >
          MOCK TITLE
        </span>
      </TextContent>
      <Required>
        <span
          className="is-required"
        >
          *
        </span>
      </Required>
      <Disabled>
        <span
          className="is-disabled"
        >
          *
        </span>
      </Disabled>
      <ReadOnly>
        <span
          className="is-readonly"
        >
          *
        </span>
      </ReadOnly>
    </label>
  </TextareaTitle>
  <TextareaDescription>
    <span
      className="MOCK CLASSNAME"
    >
      <TextContent>
        <span
          className="text-content"
        >
          MOCK DESCRIPTION
        </span>
      </TextContent>
    </span>
  </TextareaDescription>
  <TextareaErrorMessage>
    <span
      className="MOCK CLASSNAME"
    >
      <TextContent>
        <span
          className="text-content"
        >
          Unknown
        </span>
      </TextContent>
    </span>
  </TextareaErrorMessage>
  <TextareaField>
    <textarea
      accessKey="MOCK ACCESS KEY"
      className="MOCK CLASSNAME"
      disabled={true}
      id="MOCK ID"
      name="MOCK NAME"
      onChange={[Function]}
      placeholder="MOCK PLACEHOLDER"
      readOnly={true}
      required={true}
      tabIndex={1}
      value="MOCK VALUE"
    />
  </TextareaField>
</div>
`;

exports[`#cogs/cogs/textarea <Cog /> With required props matches the snapshot 1`] = `
<div
  className="MOCK CLASSNAME"
>
  <TextareaTitle />
  <TextareaDescription />
  <TextareaErrorMessage />
  <TextareaField>
    <textarea
      className="MOCK CLASSNAME"
      disabled={false}
      id="MOCK NAME"
      name="MOCK NAME"
      onChange={[Function]}
      readOnly={false}
      required={false}
      value=""
    />
  </TextareaField>
</div>
`;
